[package]
name = "whoami"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
maud = { version = "0.26.0", features = ["axum"] }
tokio = { version = "1.39.1", features = ["full", "default"] }
